# Litep2p

./: .gitignore  ANDROID_OR_DOCKER.sh  CHANGES_MADE.txt  CIRCULAR_DEPENDENCY_FIX.md  FIXES_APPLIED.md  FIX_COMPLETE.txt  MODULARIZATION_COMPLETE.md  PRODUCTION_READINESS_TEST.md  QUICK_BUILD_RUN.sh  QUICK_REFERENCE.txt  README.md  RUN_EXECUTABLE.md  STANDALONE_RUN_GUIDE.sh  cline_mcp_settings.example.json  cline_mcp_settings.json  comprehensive_test_suite.sh  config.example.json  config.json  gradle.properties  input.txt  local_peer_db.md  pytest.ini  recommendation_improvement.md  reconnect.md  repro_msg_issue.py  run.sh  test_message_passing.py
app/src/main/cpp/: BATTERY_OPTIMIZATION.md  CMakeLists.txt  IMPROVEMENTS_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  NOISE_NK.md  NOISE_NK_QUICK_REFERENCE.md  NOISE_NK_SUMMARY.md  NOISE_PROTOCOL_GUIDE.md  QUICK_REFERENCE.md  README_IMPLEMENTATION_COMPLETE.md
app/src/main/cpp/cmake/: FindSodium.cmake
app/src/main/cpp/include/: aes_wrapper.h  connection_manager.h  discovery.h  epoll_reactor.h  handshake.h  handshake_server.h  heartbeat.h  jni_bridge.h  jni_glue.h  jni_helpers.h  logger.h  message_router.h  network.h  p2p_api.h  peer.h  peer_manager.h  protocol.h  session_cache.h  session_events.h  session_global.h  session_manager.h  session_manager.h.old  udp_connection_manager.h
app/src/main/cpp/jni_include/: jni.h  jni_md.h
app/src/main/cpp/libsodium/arm64-v8a/lib/: libsodium.la
app/src/main/cpp/libsodium/arm64-v8a/lib/pkgconfig/: libsodium.pc
app/src/main/cpp/libsodium/armeabi-v7a/lib/: libsodium.la
app/src/main/cpp/libsodium/armeabi-v7a/lib/pkgconfig/: libsodium.pc
app/src/main/cpp/libsodium/x86/lib/: libsodium.la
app/src/main/cpp/libsodium/x86/lib/pkgconfig/: libsodium.pc
app/src/main/cpp/libsodium/x86_64/lib/: libsodium.la
app/src/main/cpp/libsodium/x86_64/lib/pkgconfig/: libsodium.pc
app/src/main/cpp/modules/: CMakeLists.txt
app/src/main/cpp/modules/corep2p/: CMakeLists.txt
app/src/main/cpp/modules/corep2p/core/: CMakeLists.txt
app/src/main/cpp/modules/corep2p/core/include/: config_manager.h  constants.h  device_utils.h  logger.h  telemetry.h
app/src/main/cpp/modules/corep2p/core/src/: config_manager.cpp  device_utils.cpp  logger.cpp  telemetry.cpp
app/src/main/cpp/modules/corep2p/crypto/: CMakeLists.txt
app/src/main/cpp/modules/corep2p/crypto/include/: aes.h  crypto_utils.h  noise_key_store.h  noise_nk.h  noise_protocol.h
app/src/main/cpp/modules/corep2p/crypto/src/: aes.c  aes.cpp  crypto_utils.cpp  noise_key_store.cpp  noise_nk.cpp  noise_protocol.cpp
app/src/main/cpp/modules/corep2p/dynamic_config/: CMakeLists.txt
app/src/main/cpp/modules/corep2p/dynamic_config/docs/: DYNAMIC_CONFIGURATION.md
app/src/main/cpp/modules/corep2p/dynamic_config/src/: dynamic_configuration_manager.cpp
app/src/main/cpp/modules/corep2p/include/: corep2p.h
app/src/main/cpp/modules/corep2p/reactor/: CMakeLists.txt
app/src/main/cpp/modules/corep2p/reactor/include/: epoll_reactor.h  event_thread_pool.h
app/src/main/cpp/modules/corep2p/reactor/src/: epoll_reactor.cpp  event_thread_pool.cpp
app/src/main/cpp/modules/corep2p/security/: CMakeLists.txt
app/src/main/cpp/modules/corep2p/security/include/: secure_session.h
app/src/main/cpp/modules/corep2p/security/src/: secure_session.cpp
app/src/main/cpp/modules/corep2p/src/: corep2p.cpp
app/src/main/cpp/modules/corep2p/transport/: CMakeLists.txt
app/src/main/cpp/modules/corep2p/transport/include/: batch_connection_manager.h  connection_manager.h  multi_socket_manager.h  network.h  quic_connection_manager.h  quic_message.h  tcp_message.h  udp_connection_manager.h  udp_message.h
app/src/main/cpp/modules/corep2p/transport/src/: batch_connection_manager.cpp  connection_manager.cpp  multi_socket_manager.cpp  network.cpp  quic_connection_manager.cpp  quic_message.cpp  tcp_message.cpp  udp_connection_manager.cpp  udp_message.cpp
app/src/main/cpp/modules/plugins/discovery/: CMakeLists.txt
app/src/main/cpp/modules/plugins/discovery/include/: broadcast_discovery_manager.h  discovery.h  peer_cache_lru.h  signaling_client.h
app/src/main/cpp/modules/plugins/discovery/src/: broadcast_discovery_manager.cpp  discovery.cpp  peer_cache_lru.cpp  signaling_client.cpp
app/src/main/cpp/modules/plugins/file_transfer/: CMakeLists.txt
app/src/main/cpp/modules/plugins/file_transfer/include/: file_transfer_manager.h  transfer_types.h
app/src/main/cpp/modules/plugins/file_transfer/src/: file_transfer_checkpoint.cpp  file_transfer_chunks.cpp  file_transfer_congestion.cpp  file_transfer_example.cpp  file_transfer_manager.cpp  file_transfer_paths.cpp
app/src/main/cpp/modules/plugins/jni/: CMakeLists.txt
app/src/main/cpp/modules/plugins/jni/include/: jni_bridge.h  jni_glue.h  jni_helpers.h  p2p_api.h  p2p_entry.h  send_peer.h
app/src/main/cpp/modules/plugins/optimization/: CMakeLists.txt
app/src/main/cpp/modules/plugins/proxy/: CMakeLists.txt
app/src/main/cpp/modules/plugins/routing/: CMakeLists.txt
app/src/main/cpp/modules/plugins/session/: CMakeLists.txt  ENGINE_HANDLER_REFACTOR.md
app/src/main/cpp/src/: aes.cpp  connection_manager.cpp  discovery.cpp  epoll_reactor.cpp  handshake_server.cpp  heartbeat.cpp  jni_bridge.cpp  jni_glue.cpp  jni_helpers.cpp  logger.cpp  message_batcher.cpp  message_router.cpp  network.cpp  noise_key_store.cpp  noise_nk.cpp  noise_protocol.cpp  p2p_api.cpp  peer_manager.cpp  peer_manager.h  protocol.cpp  session_global.cpp  session_manager.cpp  udp_connection_manager.cpp
desktop/: CMakeLists.txt  DESKTOP_TESTING.md  DOCKER_TESTING.md  README.md  build_linux.sh  build_mac.sh
desktop/include/: p2p_node.h  terminal_cli.h
desktop/src/: main.cpp  p2p_node.cpp  terminal_cli.cpp
desktop/tests/: crypto_test.cpp  file_transfer_test.cpp  message_size_runner.cpp  nat_traversal_test.cpp  proxy_test.cpp  session_manager_test.cpp  wan_integration_runner.cpp
desktop/tools/: proxy_chain_3peers.sh  proxy_chain_stdio_sim.py  proxy_netbench.cpp  proxy_peer_test.cpp  proxy_socks5.cpp  proxy_stdio.cpp  restart_simulation.py
(+147 files in other folders)
